--- a/repo-config.json
+++ b/repo-config.json
@@ -31,7 +31,8 @@
   "remediateSettings": {
     "workflowRules": {
       "enabled": true
-    }
+    },
+    "enableRenovate": true
   },
   "imageSettings": {
     "imageTracing": {
