--- a/global-config.json
+++ b/global-config.json
@@ -2,7 +2,6 @@
     "repoConfigMode": "noWhitesourceFile",
     "repoConfigFileName": ".mend",
     "ignoredRepos": {
-        "exactNames": [ LIST
-        ]
+        "exactNames": [ LIST ]
     }
 }
