--- a/global-config.json
+++ b/global-config.json
@@ -1,7 +1,3 @@
 {
-    "repoConfigMode": "noWhitesourceFile",
-    "repoConfigFileName": ".mend",
-    "ignoredRepos": {
-        "exactNames": [ LIST ]
-    }
+  "repoConfigMode": "createOnboardingPR"
 }
